[gd_scene load_steps=5 format=3 uid="uid://j3wo3pg8b8jy"]

[ext_resource type="Texture2D" uid="uid://cspw8yq76068a" path="res://Assets/white_texture.png" id="1_337u7"]
[ext_resource type="Script" uid="uid://lugymtf71peh" path="res://Scripts/level.gd" id="1_vsvp5"]
[ext_resource type="Texture2D" uid="uid://cowkq6ds430pl" path="res://Assets/portal.png" id="3_8rbpu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ba56"]
size = Vector2(32, 32)

[node name="Level" type="Node2D"]
script = ExtResource("1_vsvp5")

[node name="bottom" type="StaticBody2D" parent="."]
position = Vector2(572, 635)
scale = Vector2(40, 2)
collision_layer = 2
collision_mask = 13

[node name="Sprite2D" type="Sprite2D" parent="bottom"]
modulate = Color(0.85098, 0.341176, 0.388235, 1)
texture = ExtResource("1_337u7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottom"]
shape = SubResource("RectangleShape2D_0ba56")

[node name="bottom2" type="StaticBody2D" parent="."]
position = Vector2(240, 600)
scale = Vector2(20, 3)
collision_layer = 2
collision_mask = 13

[node name="Sprite2D" type="Sprite2D" parent="bottom2"]
modulate = Color(0.85098, 0.341176, 0.388235, 1)
texture = ExtResource("1_337u7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottom2"]
shape = SubResource("RectangleShape2D_0ba56")

[node name="bottom3" type="StaticBody2D" parent="." groups=["Wall"]]
position = Vector2(545, 587)
scale = Vector2(1, 1.5)
collision_layer = 2
collision_mask = 13

[node name="Sprite2D" type="Sprite2D" parent="bottom3"]
modulate = Color(0.85098, 0.341176, 0.388235, 1)
texture = ExtResource("1_337u7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottom3"]
shape = SubResource("RectangleShape2D_0ba56")

[node name="Jump" type="StaticBody2D" parent="." groups=["EnemyJump"]]
position = Vector2(545, 568)
collision_layer = 2
collision_mask = 13

[node name="Sprite2D" type="Sprite2D" parent="Jump"]
modulate = Color(0.85098, 0.341176, 0.388235, 1)
texture = ExtResource("1_337u7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jump"]
shape = SubResource("RectangleShape2D_0ba56")

[node name="Jump2" type="StaticBody2D" parent="." groups=["EnemyJump"]]
position = Vector2(603, 619)
collision_layer = 2
collision_mask = 13

[node name="Sprite2D" type="Sprite2D" parent="Jump2"]
modulate = Color(0.85098, 0.341176, 0.388235, 1)
texture = ExtResource("1_337u7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jump2"]
shape = SubResource("RectangleShape2D_0ba56")

[node name="Top" type="StaticBody2D" parent="."]
position = Vector2(572, -11)
scale = Vector2(40, 1)
collision_layer = 2
collision_mask = 13

[node name="Sprite2D" type="Sprite2D" parent="Top"]
modulate = Color(0.85098, 0.341176, 0.388235, 1)
texture = ExtResource("1_337u7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
shape = SubResource("RectangleShape2D_0ba56")

[node name="Left" type="StaticBody2D" parent="." groups=["Wall"]]
position = Vector2(-6, 235)
rotation = 1.5708
scale = Vector2(40, 1)
collision_layer = 2
collision_mask = 13

[node name="Sprite2D" type="Sprite2D" parent="Left"]
modulate = Color(0.85098, 0.341176, 0.388235, 1)
texture = ExtResource("1_337u7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
shape = SubResource("RectangleShape2D_0ba56")

[node name="Right" type="StaticBody2D" parent="." groups=["Wall"]]
position = Vector2(1158, 256)
rotation = 1.5708
scale = Vector2(40, 1)
collision_layer = 2
collision_mask = 13

[node name="Sprite2D" type="Sprite2D" parent="Right"]
modulate = Color(0.85098, 0.341176, 0.388235, 1)
texture = ExtResource("1_337u7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
shape = SubResource("RectangleShape2D_0ba56")

[node name="Middle" type="StaticBody2D" parent="."]
position = Vector2(858, 416)
scale = Vector2(12.5, 1)
collision_layer = 2
collision_mask = 13

[node name="Sprite2D" type="Sprite2D" parent="Middle"]
modulate = Color(0.85098, 0.341176, 0.388235, 1)
texture = ExtResource("1_337u7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Middle"]
shape = SubResource("RectangleShape2D_0ba56")

[node name="Jump3" type="StaticBody2D" parent="." groups=["EnemyJump"]]
position = Vector2(701, 416)
collision_layer = 2
collision_mask = 13

[node name="Sprite2D" type="Sprite2D" parent="Jump3"]
modulate = Color(0.85098, 0.341176, 0.388235, 1)
texture = ExtResource("1_337u7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jump3"]
shape = SubResource("RectangleShape2D_0ba56")

[node name="Middle2" type="StaticBody2D" parent="."]
position = Vector2(400, 290)
rotation = 0.610865
scale = Vector2(6, 1)
collision_layer = 2
collision_mask = 13

[node name="Sprite2D" type="Sprite2D" parent="Middle2"]
modulate = Color(0.85098, 0.341176, 0.388235, 1)
texture = ExtResource("1_337u7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Middle2"]
shape = SubResource("RectangleShape2D_0ba56")

[node name="Jump4" type="StaticBody2D" parent="." groups=["EnemyJump"]]
position = Vector2(400, 290)
rotation = 0.610865
collision_layer = 2
collision_mask = 13

[node name="Sprite2D" type="Sprite2D" parent="Jump4"]
modulate = Color(0.85098, 0.341176, 0.388235, 1)
texture = ExtResource("1_337u7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jump4"]
shape = SubResource("RectangleShape2D_0ba56")

[node name="Middle3" type="StaticBody2D" parent="."]
position = Vector2(177, 222)
scale = Vector2(8, 1)
collision_layer = 2
collision_mask = 13

[node name="Sprite2D" type="Sprite2D" parent="Middle3"]
modulate = Color(0.85098, 0.341176, 0.388235, 1)
texture = ExtResource("1_337u7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Middle3"]
shape = SubResource("RectangleShape2D_0ba56")

[node name="Portal" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(113, 298)
texture = ExtResource("3_8rbpu")

[node name="WaveTimer" type="Timer" parent="Portal"]
wait_time = 7.0
one_shot = true

[node name="SpawnTimer" type="Timer" parent="Portal"]
wait_time = 2.0
one_shot = true

[node name="Portal2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1092, 482)
texture = ExtResource("3_8rbpu")

[node name="WaveTimer" type="Timer" parent="Portal2"]
wait_time = 6.5
one_shot = true

[node name="SpawnTimer" type="Timer" parent="Portal2"]
wait_time = 2.33
one_shot = true

[node name="Portal3" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(487, 56)
texture = ExtResource("3_8rbpu")

[node name="WaveTimer" type="Timer" parent="Portal3"]
wait_time = 6.0
one_shot = true

[node name="SpawnTimer" type="Timer" parent="Portal3"]
wait_time = 2.5
one_shot = true

[connection signal="timeout" from="Portal/WaveTimer" to="." method="_on_portal_wave_timer_timeout"]
[connection signal="timeout" from="Portal/SpawnTimer" to="." method="_on_portal_spawn_timer_timeout"]
[connection signal="timeout" from="Portal2/WaveTimer" to="." method="_on_portal2_wave_timer_timeout"]
[connection signal="timeout" from="Portal2/SpawnTimer" to="." method="_on_portal2_spawn_timer_timeout"]
[connection signal="timeout" from="Portal3/WaveTimer" to="." method="_on_portal3_wave_timer_timeout"]
[connection signal="timeout" from="Portal3/SpawnTimer" to="." method="_on_portal3_spawn_timer_timeout"]
